# oxidase

./: .gitmodules  Cargo.toml  README.md  deno.json  mise.toml  oxidase.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: compare.yml  playground.yml
baseline/: .gitignore  package.json  tsconfig.json
baseline/sources/exec/: enum_basic.ts
baseline/src/: paths.mts  transpile.mts  worker.js  worker.mts  worker.test.mts
crates/: Cargo.toml  clippy.toml
crates/.cargo/: config.toml
crates/bench/: Cargo.toml  memory.mts  package.json  table.mjs  table.mts  time.mts  utils.mts
crates/bench/benches/: strip_visit.rs  time.rs  transpile.rs
crates/bench/files/: render.ts
crates/bench/src/: lib.rs  main.rs  oxc_parser.rs  oxidase.rs  swc_fast_ts_strip.rs  wasm.rs
crates/e2e/: .gitignore  Cargo.toml
crates/e2e/baseline_generator/: deno.json  main.ts  tsc.test.ts  tsc.ts  worker.ts
crates/e2e/fixture/: ecosystem_transpile_paths.txt  transpile_list.txt
crates/e2e/fixture/ecosystem/: a.txt
crates/e2e/fixture/exec/: enum.ts  namespace.ts
crates/e2e/fixture/transpile/: asi.ts  strip.ts
crates/e2e/fixtures/: transpile_list.txt
crates/e2e/src/: cache.rs  common.rs  exec.rs  format.rs  format_ts.rs  main.rs  test.rs
crates/e2e/src/generate/: js.rs  main.rs  ts.rs
crates/e2e/test_repos/: incompatible_js_paths.txt
crates/oxidase/: Cargo.toml  hello.js  hello.ts
crates/oxidase/src/: handler.rs  lib.rs  line_term.rs  patch.rs  patch_builder.rs  source.rs  string_buf.rs  ts_enum.rs  utils.rs  visitor.rs  window.rs
crates/oxidase/src/patch/: mod.rs  sourcemap_builder.rs
crates/oxidase/tests/: asi.rs  codegen.rs  strip.rs  strip.rs_  typescript.rs  utils.rs
crates/oxidase_conformance/: Cargo.toml
crates/oxidase_wasm/: Cargo.toml  mise.toml
crates/oxidase_wasm/npm/: hooks.mjs  package.json
crates/oxidase_wasm/src/: lib.rs
crates/oxidase_wasm/test/: package.json
crates/tsc/: Cargo.toml  build.rs
crates/tsc/js/: build.mjs  build.ts  deno.json  deno.jsonc  index.ts  package.json  test.ts
crates/tsc/src/: lib.rs  v8_utils.rs
playground/: index.html  package.json
playground/src/: App.svelte  app.svelte
