[workspace]
members = [ "crates/oxidase", "crates/e2e", "crates/tsc", "crates/bench", "packages/wasm/bindings"]
resolver = "2"

[workspace.dependencies]
oxc_allocator = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_parser = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_span = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_syntax = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_index = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_diagnostics = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_ast = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_data_structures = "0.45.0"
oxidase_tsc = { path = "crates/tsc" }
oxidase = { path = "crates/oxidase" }
copy_from_str = "1.0.6"
rustc-hash = "2.0.0"
hashbrown = "0.14.5"
rquickjs = "0.6.2"
serde = "1.0.210"
csv = "1.3.0"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
thread_local = "1.1.8"
googletest = "0.12.0"
anyhow = "1.0.89"
rstest_reuse = "0.7.0"
rstest = "0.23.0"
arraydeque = "0.5.1"
arrayvec = "0.7.6"
assert2 = "0.3.15"
bumpalo = "3.16.0"
dashmap = "6.1.0"
derive_more = "2.0.1"
ghost-cell = "0.2.6"
ignore = "0.4.23"
serde_json = "1.0.128"
serde_v8 = "0.243.0"
similar-asserts = "1.6.0"
smallvec = "2.0.0-alpha.7"
swc = "13.0.1"
swc_common = "6.1.0"
swc_fast_ts_strip = "9.0.0"
swc_ecma_ast = "6.1.0"
swc_ecma_parser = "8.0.1"
swc_ecma_transforms = "11.0.0"
swc_ecma_utils = "9.0.0"
swc_error_reporters = "7.0.0"
swc_ecma_visit = "6.0.0"
thiserror = "1.0.63"
v8 = "130.0.6"
criterion2  = { version = "2.0.0", default-features = false }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"
getrandom = "0.2.15"
mimalloc = "0.1.43"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"

[profile.e2e] # [profile.coverage] in https://github.com/oxc-project/oxc/blob/6cd2c323d6ce8d9ee9b8e20e015334b8bc40542d/Cargo.toml#L242
inherits = "release"
opt-level = 2 # Compile faster
codegen-units = 256 # Compile faster
lto = "thin" # Faster compile time with thin LTO
debug-assertions = true # Make sure `debug_assert!`s pass
overflow-checks = true # Catch arithmetic overflow errors
incremental = true
panic = "unwind"


# Profile used for release mode, but with debugging information for profiling
# and debugging. Use `cargo build --profile=release-with-debug` to build with this profile.
[profile.release-with-debug]
inherits = "release"
strip = false # Keep debug information in binary
debug = true # Include maximum amount of debug information
