[workspace]
members = ["oxidase_conformance", "oxidase", "e2e", "tsc"]
resolver = "2"

[profile.release.package.oxidase_e2e]
debug-assertions = true

[workspace.dependencies]
oxc_allocator = { path = "../../oxc/crates/oxc_allocator" }
oxc_parser = { path = "../../oxc/crates/oxc_parser" }
oxc_span = { path = "../../oxc/crates/oxc_span" }
oxc_syntax = { path = "../../oxc/crates/oxc_syntax" }
oxc_diagnostics = { path = "../../oxc/crates/oxc_diagnostics" }
oxc_ast = { path = "../../oxc/crates/oxc_ast" }
oxidase_tsc = { path = "tsc" }
oxidase = { path = "oxidase" }
copy_from_str = "1.0.6"
rustc-hash = "2.0.0"
hashbrown = "0.14.5"
rquickjs = "0.6.2"
serde = "1.0.210"
csv = "1.3.0"
pretty_assertions = "1.4.1"
rayon = "1.10.0"
swc_ecma_parser = "1.0.1"
swc_common = "1.0.0"
swc_ecma_ast = "1.0.0"
swc = "1.0.1"
swc_ecma_visit = "1.0.0"
swc_ecma_transforms_typescript = "1.0.1"
thread_local = "1.1.8"
googletest = "0.12.0"
anyhow = "1.0.89"
rstest_reuse = "0.7.0"
rstest = "0.23.0"
