[package]
name = "oxidase_bench"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
criterion2 = { workspace = true }
oxidase_tsc = { workspace = true }
mimalloc = { workspace = true }

[dependencies]
oxidase = { workspace = true }

swc_fast_ts_strip = { workspace = true }
swc_common = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_error_reporters = { workspace = true }

oxc_parser = { git ="https://github.com/oxc-project/oxc", rev = "d11770d552562fef1177c1758558c61752350142" }
oxc_span = { git ="https://github.com/oxc-project/oxc", rev = "d11770d552562fef1177c1758558c61752350142" }
oxc_allocator = { git ="https://github.com/oxc-project/oxc", rev = "d11770d552562fef1177c1758558c61752350142" }
getrandom = { workspace = true }

wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true}

[[bench]]
name = "transpile"
harness = false

[features]
wasm = [
    "dep:wasm-bindgen", "dep:console_error_panic_hook",
     # Fix wasm build. TODO: figure out why it's needed for the bench but not for the wasm binding
    "getrandom/js",
]
