[package]
name = "oxidase_e2e"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
oxidase = { workspace = true }
pretty_assertions = { workspace = true }
ignore = { workspace = true }
oxidase_tsc = { workspace = true }
rayon.workspace = true
similar-asserts = { workspace = true }
anyhow = { workspace = true }
thread_local.workspace = true
dashmap = { workspace = true }
csv.workspace = true
serde = { workspace = true, features = ["derive"] }
swc_ecma_parser = { workspace = true }
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc = { workspace = true }
swc_ecma_visit = { workspace = true }
swc_ecma_transforms = { workspace = true }
swc_ecma_utils = { workspace = true, features = ["stacker"] }
v8 = { workspace = true }
serde_v8 = { workspace = true }
serde_json = { workspace = true }
