[package]
name = "oxidase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arraydeque = { workspace = true }
arrayvec = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
# derive-where = "1.2.7"
derive_more = { workspace = true, features = ["from"] }
ghost-cell = { workspace = true }
oxc_allocator = { workspace = true }
oxc_parser = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_diagnostics = { workspace = true }
oxc_ast = { workspace = true }
oxc_index = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
hashbrown = { workspace = true }
copy_from_str = { workspace = true }
oxc_sourcemap = { workspace = true }
nonmax = { workspace = true }

[dev-dependencies]
#assert_matches = { version = "1.5.0" }
assert2 = { workspace = true }
googletest = { workspace = true }
rquickjs = { workspace = true }
serde_json = { workspace = true }
rstest = { workspace = true }
rstest_reuse = { workspace = true }

[features]
internal-bench = []
