[package]
name = "oxidase_wasm"
version = "0.1.0"
authors = ["branchseer <dk4rest@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
oxidase = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
